--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "ollama>=0.5.3",
 ]
 
+[project.optional-dependencies]
+examples = ["numpy>=2.3.2"]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
